Add CMake flag to treat warnings as errors
Disabled by default by the request of Nicolas.

Bug: b/123933266
Change-Id: Ie1217dc6c96ec85c9daf8246de785c8729386634
Reviewed-on: https://swiftshader-review.googlesource.com/c/25015
Tested-by: Ben Clayton <bclayton@google.com>
Kokoro-Presubmit: kokoro <noreply+kokoro@google.com>
Reviewed-by: Alexis Hétu <sugoi@google.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -66,7 +66,8 @@
             "command": "cmake",
             "args": [
                 "..",
-                "-DCMAKE_BUILD_TYPE=${input:buildType}"
+                "-DCMAKE_BUILD_TYPE=${input:buildType}",
+                "-DWARNINGS_AS_ERRORS=1"
             ],
             "options": {
                 "cwd": "${workspaceRoot}/build"
