VkCreateSwapchainKHR and VkDestroySwapchainKHR
Bare bones implementation of a creatable and
destroyable swapchain

Bug: b/124265819
Change-Id: Ie8277184863ab6b7204b6c8f6fc2b2f86ad787c9
Reviewed-on: https://swiftshader-review.googlesource.com/c/SwiftShader/+/25509
Kokoro-Presubmit: kokoro <noreply+kokoro@google.com>
Reviewed-by: Nicolas Capens <nicolascapens@google.com>
Tested-by: Hernan Liatis <hliatis@google.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2061,6 +2061,8 @@ file(GLOB_RECURSE VULKAN_LIST
     ${SOURCE_DIR}/Pipeline/*.hpp
     ${SOURCE_DIR}/WSI/VkSurfaceKHR.cpp
     ${SOURCE_DIR}/WSI/VkSurfaceKHR.hpp
+    ${SOURCE_DIR}/WSI/VkSwapchainKHR.cpp
+    ${SOURCE_DIR}/WSI/VkSwapchainKHR.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/include/vulkan/*.h}
 )
 
