--- a/src/Vulkan/vulkan.vcxproj.filters
+++ b/src/Vulkan/vulkan.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClCompile Include="..\Pipeline\PixelProgram.cpp">
       <Filter>Source Files\Pipeline</Filter>
     </ClCompile>
+    <ClCompile Include="..\Pipeline\ComputeProgram.cpp">
+      <Filter>Source Files\Pipeline</Filter>
+    </ClCompile>
     <ClCompile Include="..\Pipeline\Constants.cpp">
       <Filter>Source Files\Pipeline</Filter>
     </ClCompile>
@@ -489,6 +492,9 @@
       <Filter>Header Files\Pipeline</Filter>
     </ClInclude>
     <ClInclude Include="..\Pipeline\PixelProgram.hpp">
+      <Filter>Header Files\Pipeline</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Pipeline\ComputeProgram.hpp">
       <Filter>Header Files\Pipeline</Filter>
     </ClInclude>
     <ClInclude Include="..\Pipeline\Constants.hpp">
