Fixed build on gcc 8.2.
Deprecated macros in Vulkan and Reactor unit tests were updated with current versions.

Warning class-memaccess disabled. It was triggered by PixelProcessor::State memsetting itself in its constructor.

Change-Id: Ifeddbfb5f25817717b55754055b4f0222cea209b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -237,6 +237,13 @@ else()
         "-Werror=sign-compare"
         "-Werror=missing-braces"
     )
+    
+    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
+        list(APPEND SWIFTSHADER_COMPILE_OPTIONS
+            "-Wno-class-memaccess"
+        )
+    endif()
+
 
     if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
         list(APPEND SWIFTSHADER_COMPILE_OPTIONS
