Fixed build on gcc 8.2.
Deprecated macros in Vulkan and Reactor unit tests were updated with current versions.

Warning class-memaccess disabled. It was triggered by PixelProcessor::State memsetting itself in its constructor.

Change-Id: Ifeddbfb5f25817717b55754055b4f0222cea209b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -236,6 +236,7 @@ else()
         "-Werror=reorder"
         "-Werror=sign-compare"
         "-Werror=missing-braces"
+        "-Wno-class-memaccess"
     )
 
     if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
